Trump design and script changes
All changes for the trump quiz. All done now but still waiting for
changes on the questions.

--- a/public/trump/index.html
+++ b/public/trump/index.html
@@ -44,7 +44,8 @@ mixpanel.init("f5c7bccfce8089dd4739b4fc7d5c726a");</script><!-- end Mixpanel -->
 
 <body>
 	<div id="message">
-		<p>This quiz was brought to you by KAWO, an enterprise Weibo &amp; WeChat management software. <br><a href="http://kawo.com">Learn more here.</a></p>
+		<p>This quiz was brought to you by Mailman: China Digital &amp; Innovation Group <br>
+		<a href="http://mailmangroup.com">Learn more here.</a></p>
 	</div>
 	<div id="wrapper">
 		<div id="target"></div>
