Index fix meta info and GA
Strip all kawo related info and change to MailmanGroup.

--- a/public/trump/index.html
+++ b/public/trump/index.html
@@ -6,9 +6,9 @@
 	<title>Do you know China better than Donald Trump?</title>
 	<meta property="og:title" content="Do you know China better than Donald Trump?" />
 	<meta name="description" content="Do you know China better than Donald Trump?" />
-	<meta property="og:url" content="http://quiz.kawo.com/trump.html" />
+	<meta property="og:url" content="http://trump.mailmangroup.com/index.html" />
 	<meta name="google" content="notranslate">
-	<meta property="og:image" content="http://quiz.kawo.com/images/assets/kawo_og.png" /><!-- OpenGraph for FB -->
+	<meta property="og:image" content="http://trump.mailmangroup.com/images/assets/trump_og.png" /><!-- OpenGraph for FB -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
 	<meta name="google-site-verification" content="IYwHQeWKF4lfoW4DfmOUKwavBo3p64o7NGRg70oh74Q" />
 
@@ -20,7 +20,7 @@
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		ga('create', 'UA-39611373-2', 'staging.quiz.kawo.com');
+		ga('create', 'UA-19056157-1', 'trump.mailmangroup.com');
 		ga('send', 'pageview');
 	</script>
 
